# CBSE-Bot

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_users_and_profiles.py  0002_create_orgs_and_classes.py  0003_create_curriculum_core.py  0004_create_prompt_and_ai_run_core.py  0005_create_content_ingest_core.py  0006_create_question_system_core.py  0007_create_student_learning_core.py  0008_create_paper_and_teacher_workflows.py  0009_create_review_billing_and_eval_core.py
apps/api/src/: main.py
apps/api/src/core/: config.py  security.py
apps/api/src/middleware/: rbac.py
apps/api/src/models/: base.py  curriculum.py  organization.py  user.py
apps/api/src/routes/: auth.py  chapters.py  documents.py  health.py  paper_blueprints.py  paper_uploads.py  quizzes.py  review_queue.py  subjects.py  tutor.py
apps/api/src/schemas/: auth.py  common.py  curriculum.py
apps/api/src/scripts/: build_content_namespace.py  build_retrieval_chunks.py  inspect_pinecone_content.py  seed_curriculum.py  seed_math_ch1_question_bank.py  upsert_chapter_retrieval_chunks.py
apps/api/src/services/: auth_service.py  embedding_service.py  llm_formatter.py  paper_studio_service.py  pinecone_service.py  rag_service.py
apps/worker/: README.md  pyproject.toml
apps/worker/src/: config.py  main.py
apps/worker/src/jobs/: document_ingest.py  ping.py
apps/worker/src/pipelines/: ingest_pipeline.py
(+64 files in other folders)
