[project]
name = "cbse-ai-api"
version = "0.1.0"
description = "FastAPI service for the CBSE PCMB AI platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.16.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.12",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.6",
  "pydantic-settings>=2.9.1",
  "python-jose[cryptography]>=3.4.0",
  "python-multipart>=0.0.20",
  "redis>=6.0.0",
  "reportlab>=4.5.0",
  "sqlalchemy>=2.0.40",
  "uvicorn[standard]>=0.34.2",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "ruff>=0.11.4"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
